[package]
name = "trigger"
version = "0.3.0"
authors = ["Kay Lin <i@v2bv.net>"]
description = "Yet another GitHub Webhook listener"
homepage = "https://github.com/RedL0tus/trigger"
repository = "https://github.com/RedL0tus/trigger"
keywords = ["github", "ci", "webhook"]
readme = "README.md"
edition = "2018"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
log = "~0.4"
clap = "~2.32"
hyper = "~0.10"
yaml-rust = "~0.4"
run_script = "~0.2"
afterparty-ng = "~0.4"
pretty_env_logger = "~0.3"