[package]
name = "trigger"
version = "0.4.2"
authors = ["Kay Lin <i@v2bv.net>"]
description = "Yet another GitHub Webhook listener"
homepage = "https://github.com/RedL0tus/trigger"
repository = "https://github.com/RedL0tus/trigger"
keywords = ["github", "ci", "webhook"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"
edition = "2018"
license = "MIT"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "RedL0tus/trigger", branch = "master" }
coveralls = { repository = "RedL0tus/trigger", branch = "master" }

[dependencies]
log = "~0.4"
clap = { version = "~2.33", default-features = false, features = [] }
hyper = "~0.12"
rifling = { version = "~0.3", default-features = false, features = ["hyper-support", "crypto-use-rustcrypto"] }
yaml-rust = "~0.4"
run_script = "~0.2"
pretty_env_logger = "~0.3"

[profile.release]
lto = true
debug = false
panic = 'abort'
rpath = false
opt-level = 'z'
codegen-units = 1
debug-assertions = false
